# cligen

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  Doxyfile  LICENSE.md  Makefile.in  README.md  banned.h  build.c  cligen.h  cligen_buf.c  cligen_buf.h  cligen_buf_internal.h  cligen_callback.c  cligen_callback.h  cligen_config.h  cligen_config.h.in  cligen_custom.h  cligen_cv.c  cligen_cv.h  cligen_cv_internal.h  cligen_cvec.c  cligen_cvec.h  cligen_cvec_internal.h  cligen_expand.c  cligen_expand.h  cligen_file.c  cligen_gen.c  cligen_gen.h  cligen_getline.c  cligen_getline.h  cligen_handle.c  cligen_handle.h  cligen_handle_internal.h  cligen_hello.c  cligen_history.c  cligen_history.h  cligen_history_internal.h  (+40 more)
.github/workflows/: ci.yml
build-root/scripts/: generate-deb-changelog
build_packet/debian/: changelog  control
build_packet_dev/debian/: control
debian/: HOW_TO_PKG.md  changelog  cligen-dev.install  cligen.postinst  cligen.postrm  cligen.preinst  cligen.prerm  control  copyright  gbp.conf  libcligen-dev.examples  libcligen-dev.install  libcligen7.install  postinst  rules
extras/rpm/: Makefile.in  cligen.spec
extras/scripts/: version
fuzz/: README.md  runfuzz.sh
fuzz/specs/: commands.cli  sets.cli
scripts/: build_deb.sh
test/: README.md  all.sh  config.sh.in  lib.sh  mem.sh  sum.sh  test_alias.sh  test_cbuf.sh  test_commands.sh  test_comment.sh  test_compile.sh  test_completion.sh  test_cv_api.sh  test_escaping.sh  test_expand.sh  test_expand_tab.sh  test_getline.sh  test_handle_options.sh  test_helpstrings.sh  test_hide.sh  test_hist_cb.sh  test_history_file.sh  test_list.sh  test_mode.sh  test_node_filter.sh  test_parsetree.sh  test_partial_match.sh  test_pipe.sh  test_preference.sh  test_reftree.sh  test_rest.sh  test_scroll.sh  test_scroll_wide.exp  test_scroll_wrap.exp  test_sets.sh  test_tutorial.sh  test_types.sh  test_uint_range_error.sh  test_var.sh
